RESOLVED FIXED270670
AX: Loading progress percentage used for WebAre title is not localized.
https://bugs.webkit.org/show_bug.cgi?id=270670
Summary AX: Loading progress percentage used for WebAre title is not localized.
Andres Gonzalez
Reported 2024-03-07 15:54:10 PST
.
Attachments
Patch (4.66 KB, patch)
2024-03-07 16:01 PST, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2024-03-07 15:54:18 PST
Andres Gonzalez
Comment 2 2024-03-07 16:01:17 PST
EWS
Comment 3 2024-03-08 07:15:33 PST
Committed 275834@main (bd1508d26370): <https://commits.webkit.org/275834@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470237 [details].
Note You need to log in before you can comment on or make changes to this bug.