AX: Loading progress percentage used for WebAre title is not localized. https://bugs.webkit.org/show_bug.cgi?id=270670 <rdar://problem/124238656>

Reviewed by Tyler Wilcock.

Added COCOA helper function localizedPercentage and modified AXProcessingPage to return the entire localized string including the percentage.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::reportLoadingProgress):
* Source/WebCore/en.lproj/Localizable.strings:
* Source/WebCore/platform/LocalizedStrings.cpp:
(WebCore::AXProcessingPage): Deleted.
* Source/WebCore/platform/LocalizedStrings.h:
* Source/WebCore/platform/cocoa/LocalizedStringsCocoa.mm:
(WebCore::localizedPercentage):
(WebCore::AXProcessingPage):

Canonical link: https://commits.webkit.org/275834@main